loopfor.LoopFor.scala.error
Compilation error:
LoopFor:2: error: '=' expected but ';' found.
while (!isOverBaggle()){
^