loopfor.LoopFor.scala.code
var stepAmount
while (!isOverBaggle()){
  forward()
  stepAmount = stepAmount+1
}
pickupBaggle
for(stepper <- 0 to stepAmount){
  backward()
}
dropBaggle